@@ -12,16 +12,22 @@ from pypet.tests.hdf5_merge_test import TestMergeResultsSort, MergeTest
 from pypet.tests.hdf5_removal_and_continue_tests import ContinueTest
 from pypet.tests.utilstest import CartesianTest
 from pypet.tests.environment_test import EnvironmentTest
+from pypet.tests.annotations_test import AnnotationsTest
+
+try:
+    from pypet.tests import mpcoverage
+except ImportError:
+    pass
 
 from pypet.tests.test_helpers import make_run
 
 # Works only if someone has installed Brian
 try:
-    from pypet.tests.brian_tests.brian_parameter_test import BrianParameterTest, BrianParameterStringModeTest, \
+    from pypet.tests.briantests.brian_parameter_test import BrianParameterTest, BrianParameterStringModeTest, \
         BrianResult, BrianResultStringModeTest
     if not os.getenv('TRAVIS',False):
-        from pypet.tests.brian_tests.brian_monitor_test import BrianMonitorTest
-        from pypet.tests.brian_tests.brian_full_network_test import NetworkTest
+        from pypet.tests.briantests.brian_monitor_test import BrianMonitorTest
+        from pypet.tests.briantests.brian_full_network_test import NetworkTest
 except ImportError as e:
     print e.message
     pass
